<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SKUFF</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back_button">Tillbaka</string>
    <string name="read_more">Läs mer</string>
    <string name="icon_description">Ikon</string>
    
    <string name="news_info_pre">Skapad</string>
    <string name="news_info_post">av</string>
    
    <string name="compulsory">Obligatorisk</string>
    
    <string name="group_name_default">Gruppnamn</string>
    
    <string name="sag_member_image">Bild av ledamot</string>
    <string name="sag_member_post_default">Ledamot</string>
    <string name="sag_member_name_default">Ledamotens namn</string>
    <string name="sag_member_age_default">XX år</string>
    <string name="sag_age_unity">år</string>
    
    <string name="contest_header">Veckans tävling!</string>
    <string name="contest_time_info">OBS! Din svarstid spelar roll!</string>
    <string name="contest_theme_label">Tema:</string>
    <string name="contest_theme_value">[Tema]</string>
    <string name="contest_price_label">Pris:</string>
    <string name="contest_price_value">[Pris]</string>
    <string name="contest_ending_label">Gäller till:</string>
    <string name="contest_ending_value">YYYY-MM-DD HH:MM</string>
    <string name="contest_start_label">Starta tävling</string>
    <string name="contest_error404">Det finns ingen tävling för stunden!</string>
    <string name="contest_question">Fråga</string>
    <string name="contest_question_header">Fråga x</string>
    <string name="contest_counter">0.00 s</string>
    <string name="contest_next">Nästa fråga</string>
    <string name="contest_option">Alternativ</string>
    <string name="contest_freetext_value">Svar</string>
    <string name="contest_userdata_header">Skicka resultat</string>
    <string name="contest_userdata_info">Ange ditt namn och nummer för att vi ska kunna kontakta dig om du vinner.</string>
    <string name="contest_userdata_name_label">Namn:</string>
    <string name="contest_userdata_name_value">Sven Svensson</string>
    <string name="contest_userdata_phone_label">Telefon:</string>
    <string name="contest_userdata_phone_value">0725-867290</string>
    <string name="contest_userdata_submit">Skicka</string>
    <string name="contest_credits_header">Tävlingen slutförd!</string>
    <string name="contest_credits_info">Dina svar har nu skickats för rättning! Resultatet kommer att publiceras på Istället och du kommer bli kontaktad om du vunnit!\nLycka till!</string>
    <string name="contest_credits_header_fail">Tävlingen slut men fel uppstod!</string>
    <string name="contest_credits_info_fail">Du har nu besvarat alla frågor! Det uppstod dock problem när ditt resultat skulle synkas mot servern. Vänligen se till att du har en aktiv anslutning till internet och starta om appen för att synka.</string>
    
    <string name="tip_subject_title">Ämne:</string>
    <string name="tip_subject_prompt">Välj ämne</string>
    <string-array name="tip_subjects">
        <item>Temakväll</item>
        <item>Appen</item>
        <item>Annat</item>
    </string-array>
    <string name="tip_anonymous_title">Anonym</string>
    <string name="tip_name_title">Namn:</string>
    <string name="tip_message_title">Meddelande</string>
    <string name="tip_message_hint">Skriv här</string>
    <string name="tip_send_button">Skicka</string>
    <string name="tip_success">Ditt tips skickades och kommer att läsas snart!</string>
    <string name="tip_failure">Något gick fel då tipset skulle skickas, försök igen!</string>
    
    <string name="contact_image">Kontaktbild</string>
    <string name="contact_name_default">Kontaktens namn</string>
    <string name="contact_phone_default">Inget tel.nummer</string>
    <string name="contact_mail_default">Ingen mail</string>
    <string name="contact_mail_header">Välj mail-klient</string>
    
    <string name="notification_contest_title">En ny tävling!</string>
    <string name="notification_event_title_created">Ett evenemang har skapats!</string>
    <string name="notification_event_title_updated">Ett evenemang har uppdaterats!</string>
    <string name="notification_news_title">Det har kommit en nyhet!</string>
    <string name="notification_group_title_created">En ny grupp har skapats!</string>
    <string name="notification_group_title_updated">En ny grupp har skapats!</string>

    <string-array name="nav_drawer_items">
        <item>Nyheter</item>
        <item>Kalender</item>
        <item>Grupper</item>
        <item>Tävling</item>
        <item>Arbetsgrupp</item>
        <item>Tipsa oss</item>
        <item>Kontakt</item>
    </string-array>
    
    <array name="nav_drawer_icons">
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_calender</item>
        <item>@drawable/ic_groups</item>
        <item>@drawable/ic_contest</item>
        <item>@drawable/ic_sag</item>
        <item>@drawable/ic_tip</item>
        <item>@drawable/ic_contact</item>
    </array>
    
    <string name="desc_list_item_icon">Meny-ikon</string>
</resources>
