<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="25dp"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/contest_userdata_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/contest_userdata_header"/>
    
    <TextView android:id="@+id/contest_userdata_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"
        android:text="@string/contest_userdata_info" />
    
    <LinearLayout android:id="@+id/contest_userdata_name_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">
        
        <TextView android:id="@+id/contest_userdata_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:textStyle="bold"
            android:text="@string/contest_userdata_name_label" />
        
        <EditText android:id="@+id/contest_userdata_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:textSize="14sp"
            android:hint="@string/contest_userdata_name_value"
            android:inputType="text" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/contest_userdata_phone_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">
        
        <TextView android:id="@+id/contest_userdata_phone_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:textStyle="bold"
            android:text="@string/contest_userdata_phone_label" />
        
        <EditText android:id="@+id/contest_userdata_phone_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:textSize="14sp"
            android:hint="@string/contest_userdata_phone_value"
            android:inputType="phone" />
    </LinearLayout>
    
    <Button android:id="@+id/contest_userdata_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contest_userdata_submit" />"

</LinearLayout>
