<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="25dp"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/contest_question_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/contest_question_header"/>
    
    <TextView android:id="@+id/contest_question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:textSize="16sp"
        android:text="@string/contest_question" />
    
    <ListView android:id="@+id/contest_answers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0dp"
        android:choiceMode="none"
        android:listSelector="@color/transparent" />
    
    <Button android:id="@+id/contest_submit_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/contest_next" />
    

</LinearLayout>
